# recip-jsonld

recipe-client/: .neutrinorc.js  package-lock.json  package.json
recipe-client/src/: App.jsx
recipe-client/src/components/finders/: RecipeFinder.jsx
recipe-client/src/components/views/: RecipeAuthorView.js  RecipeDescriptionView.js  RecipeTimeView.js  RecipeTitleView.js  RecipeView.jsx
recipe-server/: .gitignore  pyproject.toml  recipes.db
recipe-server/examples/: adhoc.py
recipe-server/recipe_server/: app.py  config.yaml  recipe_controller.py  recipe_repository.py  server.py  startup.py  types.py
recipe-server/tests/: test_placeholder.py
