[tool.poetry]
name = "recipe-server"
version = "0.1.0"
description = "A recipe server for jsonld"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
bareasgi-rest = {version = "^3.0-rc.1", allows-prereleases = true}
hypercorn = "^0.9.0"
aiosqlite = "^0.11.0"
typing-extensions = "^3.7"
bareasgi-cors = "^3.1"
PyYaml = "^5.3"
[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
mypy = "^0.761.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
